cleanup warnings